		PHP PDO driver
	added row cache to mysql drop-in replacement library to fix issues on
		systems with 32-bit pointers
	fixed subtle db2 output bind bug where a value stored in the database
		using fewer than 64-bits might be copied out incorrectly
	fixed a bug that could cause key columns to be duplicated when
		describing an oracle table and looking up key data is enabled

0.57 - fixed an overloaded virtual function error in sqlr-status
	fixed parsing of "term as type" clauses in queries
	fixed 0 vs. None error in python getRowDictionary method
	tweaked php and php_pdo modules to build with php 5.6.0 on windows
	updated deployment projects for windows, adding perl, php, python
		and java, and adding x64 support
	describe/getColumnList supports synonyms with oracle now
	the mysql, firebird and oracle connections return sensible errors when
		the format of a numeric bind variable is wrong now
	fixed a bug that could cause the mysql connection to loop up if
		alphanumeric bind variable names were used instead of numbers
	fixed a bug that could cause the database specified in the mysql
		connection string to be ignored
	fixed a bind-variable translation bug that could cause variables not
		to be translated when multiple formats are used in the same
		query and one of them is the correct format
	describing oracle tables returns key (PRI,UNI,MUL) info now
	added disablekeylookup option to disable getting key information when
		describing oracle tables
	fixed broken --with-system-libtool configure option
	mysql-config --libs_r is used in preference to --libs now,
		solves build error with maria db on ubuntu 14.04.1
	fixed mysql drop-in lib errors with mysql_row_seek and mysql_row_tell

0.56 - removed VERSION from perl api bootstrap
	reorganized and simplified perl api code
	got perl api working on windows with ActivePerl
	perl api uninstall cleans up better now
	got python api working on windows with ActivePython
	consolidated php include tweaks